--- a/UnitSwapCalc/cryptix-main/README
+++ b/UnitSwapCalc/cryptix-main/README
@@ -1,3 +1,7 @@
+I am trying to breathe new life into this project. My hopes are to find a way to repurpose this and
+be able to deploy it on a website. The author created a fantastic tool and I am trying to get it
+into the hands of more people by making it easier to access.
+
 NOTE: CRYPTIX IS ARCHIVED!
 
 cryptix - unit converter for android
